--- a/style.css
+++ b/style.css
@@ -19,6 +19,9 @@ header {
     padding: 1rem 2rem;
     background-color: #333;
     color: #fff;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
 }
 
 .logo img {
